--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "main": "./out/extension.js",
   "activationEvents": [
+    "onLanguage:markdown",
     "onCommand:extension.getImageSizes"
   ],
   "contributes": {
