--- a/package.json
+++ b/package.json
@@ -15,6 +15,19 @@
     "onLanguage:markdown",
     "onCommand:extension.getImageSizes"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chinonnan/markdown-image-size"
+  },
+  "homepage": "https://github.com/chinonnan/markdown-image-size/blob/main/README.md",
+  "bugs": {
+    "url": "https://github.com/chinonnan/markdown-image-size/issues"
+  },
+  "icon": "res/markdown.png",
+  "galleryBanner": {
+    "color": "#252526",
+    "theme": "dark"
+  },
   "contributes": {
     "commands": [
       {
